Consolidate POM dependencies between project with help of parent POM file